<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/header"
        android:textAlignment="center"
        android:text="@string/movie_info" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:text="@string/movie_title" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_release"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textRelease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_description"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/buttonShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_share" />

    <Button
        android:id="@+id/buttonFavorito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_favorito" />

    <Button
        android:id="@+id/buttonFavoritoRemove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_favorito_eliminar"
        android:visibility="gone" />
</LinearLayout>