<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="deveando.net.tvinfo.SettingsActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configuracion"
            android:textSize="@dimen/header"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar_genero"
            android:layout_marginTop="10dp" />

        <Spinner
            android:id="@+id/spinnerGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Switch
            android:id="@+id/switchSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configuracion_switch" />

        <Button
            android:id="@+id/buttonGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configuracion_guardar" />
    </LinearLayout>

    <fragment
        android:id="@+id/navigation_drawer"
        android:name="deveando.net.tvinfo.NavigationDrawerFragment"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        tools:layout="@layout/drawer_main" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</android.support.v4.widget.DrawerLayout>